tests/ui/closures/varargs-in-closure-isnt-supported.stderr
error: unexpected `...`
  --> $DIR/varargs-in-closure-isnt-supported.rs:5:20
   |
LL |     let mut lol = |...| ();
   |                    ^^^ not a valid pattern
   |
   = note: C-variadic type `...` is not allowed here

error: aborting due to 1 previous error

